--- a/views/form_feild.ejs
+++ b/views/form_feild.ejs
@@ -1,4 +1,13 @@
 <div class="form-group">
     <label for="title">Title</label>
-    <input type="text" name="title" id="title">
+    <input required type="text" name="title" id="title" class="form-control">
 </div>
+
+<div class="form-group">
+    <label for="description">Description</label>
+    <textarea required name="description" id="description" class="form-control" rows="3"></textarea>
+</div>
+
+<a href="/" class="btn btn-secondary savebtn">Cancel</a>
+
+<button type="submit" class="btn btn-primary savebtn">Save</button>
