--- a/views/new.ejs
+++ b/views/new.ejs
@@ -5,14 +5,11 @@
         <div class="col-md-10 col-12 mx-auto mb-4">
             <h1 class="newblog"> New Blogs</h1>
 
-            <form action="/" method="POSTS">
+            <form action="/create" method="POST">
                 <%- include("form_feild.ejs") %>
-
             </form>
         </div>
     </div>
-
 </div>
-
 
 <%- include("partials/footer.ejs") %>
